docs: update CLAUDE.md for current Java 25 / Gradle 9 / Spring Boot 4.1 practices
Refreshes guidance to match GA (non-beta) tooling as it stands today: Jackson 3's
groupId move, JSpecify nullability, RestClient/RestTestClient, ProblemDetail
error responses, structured logging, opt-in virtual threads, finalized JDK 25
JEPs worth using (Scoped Values, Flexible Constructor Bodies) versus ones still
in preview, and Gradle 9 conventions (config cache, version catalogs, wrapper
bumps). Also drops the stale "not a git repository yet" line.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>